Add initial source files and design documentation for RPMA v2 application
- Created a new file listing all source files in the project.
- Added comprehensive design documentation outlining the UI component catalog, design principles, and responsive breakpoints.
- Included detailed descriptions of components, their usage patterns, and accessibility features.

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /target
 /node_modules
 /.next
-
+_tmp_
 Cargo.lock
 
 # Tauri generated
@@ -12,9 +12,11 @@ Cargo.lock
 .DS_Store
 
 .env
-.env.local 
+.env.local
 
+# Backup files
+*.backup
+*.patch
 
-  
 start_dev.bat
 stop_dev.bat
