Refactor Material and Notification Models for Improved Error Handling and Data Retrieval
- Updated Material model to handle potential errors when retrieving category_id from the database.
- Enhanced NotificationTemplate model to support fallback retrieval of notification_type from message_type.
- Modified MaterialRepository to include category_id in various SQL queries for better data consistency.
- Added user seeding function in Message and NotificationPreferences repositories for improved test setup.
- Introduced task and intervention seeding functions in Photo and TaskHistory repositories to ensure test integrity.
- Cleaned up unused imports and adjusted test cases for better readability and maintainability.
- Updated validation logic for usernames to allow hyphens and prevent starting/ending with underscores or hyphens.
- Adjusted WorkerPool implementation to correctly manage task queue sizes during execution.
- Enhanced PDF generation service by removing unnecessary imports and improving code clarity.

--- a/src-tauri/.cargo/config.toml
+++ b/src-tauri/.cargo/config.toml
@@ -1,6 +1,6 @@
 [build]
 # Use fewer parallel jobs to reduce memory usage
-jobs = 2
+jobs = 1
 incremental = true
 target-dir = "target"
 
@@ -9,7 +9,7 @@ target-dir = "target"
 rustflags = ["-C", "target-cpu=native"]
 
 [profile.dev]
-# Compile faster in dev
+# Compile faster in dev (and avoid OOM/ICE on low-memory systems)
 opt-level = 0
 debug = true
 split-debuginfo = "unpacked"
@@ -17,7 +17,7 @@ overflow-checks = true
 lto = false
 panic = "unwind"
 incremental = true
-codegen-units = 256
+codegen-units = 16
 
 [profile.dev.package."*"]
 # Optimize dependencies for faster builds
