fix: resolve UTF-8 encoding corruption in French text
Fixed 492 corrupted UTF-8 characters across 39 frontend files where source files were saved with incorrect encoding (ISO-8859-1 instead of UTF-8). Added infrastructure to prevent future corruption.

Changes:
- Fixed corrupted French characters (é, è, ê, à, ç, ô, etc.) in all frontend source files
- Added scripts/fix-encoding.js to automatically detect and fix encoding issues
- Added .husky/pre-commit hook to block commits with corrupted UTF-8 patterns
- Added npm script "fix:encoding" for easy manual fixes

This resolves issues where French UI text was displaying as "GÃ©rer", "TÃ¢che", "QualitÃ©", etc. instead of proper accented characters.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "install": "npm run frontend:install",
     "clean": "npm run frontend:clean && cd src-tauri && cargo clean",
     "frontend:clean": "cd frontend && rm -rf node_modules .next out",
+    "fix:encoding": "node scripts/fix-encoding.js",
     "prepare": "husky"
   },
   "devDependencies": {
