feat: add encoding check script and update package.json
- Introduced a new script `check-mojibake.js` to detect potential mojibake issues in text files.
- Updated `package.json` to include a new script command for running the encoding check.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -166,6 +166,11 @@ jobs:
       run: |
         cd frontend
         npm ci
+
+    - name: Check frontend text encoding
+      run: |
+        cd frontend
+        npm run encoding:check
         
     - name: Build frontend
       run: |
