--- a/package.json
+++ b/package.json
@@ -34,6 +34,11 @@
     "clean": "npm run frontend:clean && cd src-tauri && cargo clean",
     "frontend:clean": "cd frontend && rm -rf node_modules .next out",
     "fix:encoding": "node scripts/fix-encoding.js",
+    "git:start-feature": "node scripts/git-workflow.js start-feature",
+    "git:sync-feature": "node scripts/git-workflow.js sync-feature",
+    "git:finish-feature": "node scripts/git-workflow.js finish-feature",
+    "git:cleanup-feature": "node scripts/git-workflow.js cleanup-feature",
+    "git:guard-main": "node scripts/git-workflow.js guard-main",
     "prepare": "husky"
   },
   "devDependencies": {
