--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "npm run types:sync && set JWT_SECRET=dfc3d7f5c295d19b42e9b3d7eaa9602e45f91a9e5e95cbaa3230fc17e631c74b && npm run tauri dev",
     "build": "npm run types:sync && npm run tauri build",
     "tauri": "tauri",
-    "types:sync": "cd src-tauri && cargo run --bin export-types --features=\"ts-rs\" | node ../scripts/write-types.js",
+    "types:sync": "cd src-tauri && cargo run --bin export-types | node ../scripts/write-types.js",
     "frontend:dev": "cd frontend && npm run dev",
     "frontend:build": "cd frontend && npm run build",
     "frontend:install": "cd frontend && npm install",
