Add integration tests for authentication and intervention commands
- Created `auth_commands_test.rs` to test authentication command handlers including login, session validation, logout, and account creation.
- Created `intervention_commands_test.rs` to test intervention workflow command handlers including starting interventions, advancing steps, and finalizing interventions.
- Added `task_commands_test.rs` for task management command handlers covering task creation, validation, assignment, and statistics.
- Introduced `mod.rs` to organize command tests and provide utility functions for creating test sessions and technicians.
- Added `test_files.rs` to group migration tests.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -155,5 +155,6 @@ serial_test = "3.0"      # Test isolation
 criterion = "0.5"         # Performance testing
 proptest = "1.4"         # Property-based testing
 pretty_assertions = "1.4" # Better error messages in tests
+cargo-tarpaulin = "0.27"  # Coverage reporting
 
 
