--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug",
     "test:e2e:codegen": "playwright codegen",
+    "test:e2e:client-lifecycle": "playwright test client-lifecycle.spec.ts",
     "analyze": "npm run build && npx @next/bundle-analyzer"
   },
   "devDependencies": {
