Add comprehensive unit tests for user settings and command handlers
- Created unit tests for User Settings Service, covering creation, retrieval, updating, and deletion of user settings.
- Implemented tests for various user settings categories including profile, preferences, security, performance, accessibility, and notifications.
- Added command handler tests for authentication, client, user, task, and intervention commands, ensuring proper structure and functionality.
- Introduced simple tests for basic request structure validation in authentication commands.
- Established a test utility module for setting up test databases and contexts for command tests.
- Ensured all tests validate request/response structures and function signatures.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -34,6 +34,26 @@ harness = false
 name = "audit_benchmarks"
 harness = false
 
+[[test]]
+name = "auth_commands_test"
+path = "tests/commands/auth_commands_test.rs"
+
+[[test]]
+name = "client_commands_test"
+path = "tests/commands/client_commands_test.rs"
+
+[[test]]
+name = "user_commands_test"
+path = "tests/commands/user_commands_test.rs"
+
+[[test]]
+name = "intervention_commands_test"
+path = "tests/commands/intervention_commands_test.rs"
+
+[[test]]
+name = "task_commands_test"
+path = "tests/commands/task_commands_test.rs"
+
 [build-dependencies]
 tauri-build = { version = "2.0", features = [] }
 
