feat: Add TypeScript bindings for inventory and messaging systems
- Introduced new TypeScript types for various entities including InterventionMaterialSummary, InventoryMovementSummary, InventoryStats, and InventoryTransaction.
- Added message-related types such as Message, MessageListResponse, and MessageTemplate.
- Implemented user account and role types, along with notification preferences and message query filters.
- Created migration scripts for adding two-factor authentication columns to the users table.
- Developed smoke tests for core services including task validation and two-factor authentication.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -165,6 +165,7 @@ totp-rs = { version = "5.5", features = ["qr"] }
 default = ["custom-protocol"]
 custom-protocol = ["tauri/custom-protocol"]
 sqlcipher = []  # Optional feature for SQLCipher encryption support
+legacy-tests = [] # Enable legacy integration/performance/proptest modules
 
 [dev-dependencies]
 # Testing framework
@@ -176,5 +177,4 @@ criterion = "0.5"         # Performance testing
 proptest = "1.4"         # Property-based testing
 pretty_assertions = "1.4" # Better error messages in tests
 cargo-tarpaulin = "0.27"  # Coverage reporting
-
 
