feat: Introduce shared IPC module and error handling for Tauri application
- Added a new `shared` module containing `app_state`, `ipc`, and `error` submodules.
- Implemented `AppStateType` for shared application state across IPC entrypoints.
- Created structured error handling in the `ipc` module with `AppError` and `AppResult`.
- Developed correlation context management utilities for consistent logging across IPC commands.
- Added response envelopes for API responses, including support for compression.
- Introduced a bounded-context completion checklist to track migration progress.
- Implemented a migration audit script to identify legacy artifacts and enforce strictness in bounded contexts.

--- a/package.json
+++ b/package.json
@@ -31,11 +31,17 @@
     "security:audit": "node scripts/security-audit.js",
     "duplication:detect": "node scripts/detect-duplication.js",
     "architecture:check": "node scripts/architecture-check.js",
+    "architecture:check:strict": "node scripts/architecture-check.js --strict",
     "validate:architecture": "node scripts/validate-bounded-contexts.js",
     "validate:bounded-contexts": "node scripts/validate-bounded-contexts.js",
+    "validate:bounded-contexts:strict": "node scripts/validate-bounded-contexts.js --strict",
     "boundary:report": "node scripts/boundary-coverage-report.js",
+    "boundary:report:strict": "node scripts/boundary-coverage-report.js --strict",
     "boundary:enforce": "node scripts/boundary-coverage-enforce.js",
-    "quality:check": "npm run frontend:lint && npm run frontend:type-check && npm run boundary:enforce && npm run validate:bounded-contexts && npm run backend:check && npm run backend:clippy && npm run backend:fmt -- --check && npm run architecture:check",
+    "boundary:enforce:strict": "node scripts/boundary-coverage-enforce.js --strict",
+    "migration:audit": "node scripts/bounded-context-migration-audit.js",
+    "migration:audit:strict": "node scripts/bounded-context-migration-audit.js --strict",
+    "quality:check": "npm run frontend:lint && npm run frontend:type-check && npm run boundary:enforce && npm run validate:bounded-contexts && npm run backend:check && npm run backend:clippy && npm run backend:fmt -- --check && npm run architecture:check && npm run migration:audit",
     "code-review:check": "node scripts/code-review-check.js",
     "install": "npm run frontend:install",
     "clean": "npm run frontend:clean && cd src-tauri && cargo clean",
