--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,81 +23,23 @@ env:
   NODE_VERSION: "20"
 
 jobs:
-  # ── Frontend ──────────────────────────────────
-  frontend:
-    name: Frontend (lint/build/test)
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: npm
-          cache-dependency-path: frontend/package-lock.json
-
-      - name: Install deps
-        working-directory: frontend
-        run: npm ci
-
-      - name: Lint
-        working-directory: frontend
-        run: npm run lint
-
-      - name: Type check
-        working-directory: frontend
-        run: npm run type-check
-
-      - name: Architecture check
-        run: node scripts/architecture-check.js
-        continue-on-error: true
-
-      - name: Encoding check (if exists)
-        working-directory: frontend
-        run: |
-          if npm run | grep -q "encoding:check"; then
-            npm run encoding:check
-          else
-            echo "No encoding:check script, skipping."
-          fi
-
-      # FIX #3: Guard sur test:ci avant d'appeler
-      - name: Run tests (if script exists)
-        working-directory: frontend
-        run: |
-          if npm run | grep -q "test:ci"; then
-            npm run test:ci
-          else
-            echo "⚠️  No test:ci script found – skipping."
-          fi
-
-      - name: Type drift check
-        run: node scripts/ci-type-drift-check.js
-        continue-on-error: true
-
-      - name: Build
-        working-directory: frontend
-        env:
-          CI: true
-        run: npm run build
-
-  # ── Rust ──────────────────────────────────────
-  rust:
-    name: Rust (${{ matrix.toolchain }})
+  # ══════════════════════════════════════════════════════════
+  # JOB 1 — check
+  # Frontend (lint/type/test/build) + Rust (fmt/clippy/test)
+  # + Security (audit/deny) + DB schema drift
+  # ══════════════════════════════════════════════════════════
+  check:
+    name: Check (frontend + rust + security)
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        toolchain: [stable, msrv]
-        include:
-          - toolchain: msrv
-            rust: "1.85.0"
-          - toolchain: stable
-            rust: "stable"
+        rust: [stable, "1.85.0"]
+
     steps:
       - uses: actions/checkout@v4
 
+      # ── Deps Linux (Tauri) ────────────────────────────────
       - name: Install Linux dependencies (Tauri)
         run: |
           sudo apt-get update
@@ -105,6 +47,19 @@ jobs:
             libwebkit2gtk-4.1-dev libssl-dev libgtk-3-dev \
             libayatana-appindicator3-dev librsvg2-dev build-essential
 
+      # ── Node ─────────────────────────────────────────────
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: npm
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Install frontend deps
+        working-directory: frontend
+        run: npm ci
+
+      # ── Rust ─────────────────────────────────────────────
       - name: Install Rust ${{ matrix.rust }}
         uses: dtolnay/rust-toolchain@stable
         with:
@@ -115,114 +70,94 @@ jobs:
         uses: Swatinem/rust-cache@v2
         with:
           workspaces: src-tauri -> target
+          key: ${{ matrix.rust }}
 
-      - name: Rustfmt (stable only)
-        if: matrix.toolchain == 'stable'
+      # ── Frontend checks ───────────────────────────────────
+      - name: Frontend – Lint
+        working-directory: frontend
+        run: npm run lint
+
+      - name: Frontend – Type check
+        working-directory: frontend
+        run: npm run type-check
+
+      - name: Frontend – Tests
+        working-directory: frontend
+        run: |
+          if npm run | grep -q "test:ci"; then
+            npm run test:ci
+          else
+            echo "No test:ci script – skipping."
+          fi
+
+      - name: Frontend – Build
+        working-directory: frontend
+        env:
+          CI: true
+        run: npm run build
+
+      - name: Scripts checks (arch/type-drift/schema)
+        run: |
+          node scripts/architecture-check.js || true
+          node scripts/ci-type-drift-check.js || true
+          node scripts/detect-schema-drift.js || true
+
+      # ── Rust checks (stable only) ─────────────────────────
+      - name: Rust – fmt
+        if: matrix.rust == 'stable'
         working-directory: src-tauri
         run: cargo fmt --all -- --check
 
-      - name: Clippy (stable only)
-        if: matrix.toolchain == 'stable'
+      - name: Rust – clippy
+        if: matrix.rust == 'stable'
         working-directory: src-tauri
         run: cargo clippy --all-targets --all-features -- -D warnings
 
-      # FIX #1: working-directory explicite sur src-tauri
-      - name: Tests
+      - name: Rust – tests
         working-directory: src-tauri
         run: cargo test --all --verbose
 
-  # ── Database ──────────────────────────────────
-  database:
-    name: Database (schema drift)
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      # ── Coverage (stable only) ────────────────────────────
+      - name: Coverage – install tarpaulin
+        if: matrix.rust == 'stable'
+        uses: taiki-e/install-action@v2
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          tool: cargo-tarpaulin
 
-      - name: Schema drift detection
-        run: node scripts/detect-schema-drift.js
-        continue-on-error: true
+      - name: Coverage – run
+        if: matrix.rust == 'stable'
+        working-directory: src-tauri
+        run: cargo tarpaulin --out xml --output-dir target/coverage --skip-clean
 
-  # ── Security ──────────────────────────────────
-  security:
-    name: Security (audit/deny)
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Rust (stable)
-        uses: dtolnay/rust-toolchain@stable
+      - name: Coverage – upload artifact
+        if: matrix.rust == 'stable'
+        uses: actions/upload-artifact@v4
         with:
-          toolchain: stable
+          name: coverage-xml
+          path: src-tauri/target/coverage/*.xml
 
-      - name: Cache cargo (+ binaries)
-        uses: Swatinem/rust-cache@v2
-        with:
-          workspaces: src-tauri -> target
-          cache-on-failure: true
-
-      # FIX #4: utiliser l'action dédiée pour cargo-audit (avec cache)
-      - name: cargo-audit
+      # ── Security (stable only) ────────────────────────────
+      - name: Security – cargo-audit
+        if: matrix.rust == 'stable'
         uses: rustsec/audit-check@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: cargo-deny
+      - name: Security – cargo-deny
+        if: matrix.rust == 'stable'
         uses: EmbarkStudios/cargo-deny-action@v2
         with:
           command: check
           arguments: --all-features --workspace
           manifest-path: src-tauri/Cargo.toml
 
-  # ── Coverage ──────────────────────────────────
-  coverage:
-    name: Coverage (tarpaulin)
-    runs-on: ubuntu-latest
-    needs: [rust]
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Linux dependencies (Tauri)
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libwebkit2gtk-4.1-dev libssl-dev libgtk-3-dev \
-            libayatana-appindicator3-dev librsvg2-dev build-essential
-
-      - name: Install Rust (stable)
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          toolchain: stable
-
-      - name: Cache cargo
-        uses: Swatinem/rust-cache@v2
-        with:
-          workspaces: src-tauri -> target
-
-      # FIX #4 pattern: utiliser install-action (avec cache)
-      - name: Install tarpaulin
-        uses: taiki-e/install-action@v2
-        with:
-          tool: cargo-tarpaulin
-
-      - name: Run tarpaulin
-        working-directory: src-tauri
-        run: cargo tarpaulin --out xml --output-dir target/coverage --skip-clean
-
-      - name: Upload coverage artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-xml
-          path: src-tauri/target/coverage/*.xml
-
-  # ── Build Tauri ───────────────────────────────
+  # ══════════════════════════════════════════════════════════
+  # JOB 2 — build
+  # Bundles Tauri multi-plateforme
+  # ══════════════════════════════════════════════════════════
   build:
     name: Build (${{ matrix.os }})
-    needs: [frontend, rust, security]
+    needs: [check]
     strategy:
       fail-fast: false
       matrix:
@@ -236,6 +171,7 @@ jobs:
           - os: macos-14
             target: aarch64-apple-darwin
     runs-on: ${{ matrix.os }}
+
     steps:
       - uses: actions/checkout@v4
 
@@ -287,12 +223,16 @@ jobs:
           if-no-files-found: error
           retention-days: 30
 
-  # ── Release ───────────────────────────────────
+  # ══════════════════════════════════════════════════════════
+  # JOB 3 — release
+  # Créé uniquement sur un tag v*
+  # ══════════════════════════════════════════════════════════
   release:
     name: Release
     if: startsWith(github.ref, 'refs/tags/v')
     needs: [build]
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
