feat: enhance photo upload functionality and improve intervention workflow
- Added local photo upload path to .gitignore for development.
- Updated advance step API to include intervention steps validation and payload adjustments.
- Modified finalize intervention API to handle new request structure and validation.
- Implemented progress update endpoint with a placeholder response.
- Refactored photo upload logic to handle file uploads more efficiently, including error handling for offline scenarios.
- Enhanced workflow provider to utilize cached data on fetch errors and prevent unnecessary refetching.
- Updated various components to pass intervention ID for photo uploads.
- Improved error handling and logging in the intervention workflow service.
- Adjusted database queries for photo metadata and storage to ensure compatibility with new upload structure.
- Configured local photo storage settings to avoid writing uploads into the repo root during development.

--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,8 @@ docs/duplication-report.json
 migration-tests/results/
 maintainability-report.json
 
+# Local photo uploads (legacy repo-root path during dev)
+/photos/
+
 start_dev.bat
 stop_dev.bat
