Refactor cross-domain imports and services
- Moved various models and services to a shared cross-domain module for better organization and reusability.
- Updated PDF report generation to use new cross-domain models.
- Refactored export and search services to utilize shared models.
- Adjusted task integration and facade to align with new cross-domain structure.
- Added scripts for detecting cross-domain imports and unused Rust modules.
- Introduced new analytics domain models and in-app notification service.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "architecture:check": "node scripts/architecture-check.js --strict",
     "architecture:check:strict": "node scripts/architecture-check.js --strict",
     "backend:boundaries:check": "node scripts/enforce-backend-module-boundaries.js",
+    "backend:detect-cross-domain": "node scripts/detect-cross-domain-imports.js",
+    "backend:detect-cross-domain:all": "node scripts/detect-cross-domain-imports.js --include-tests",
+    "backend:detect-unused-mods": "node scripts/detect-unused-rust-mods.js",
     "validate:architecture": "node scripts/validate-bounded-contexts.js --strict",
     "validate:bounded-contexts": "node scripts/validate-bounded-contexts.js --strict",
     "validate:bounded-contexts:strict": "node scripts/validate-bounded-contexts.js --strict",
