feat(migrations): add trigger for automatic user settings creation on user insert
- Implemented a new trigger `user_insert_create_settings` that automatically creates a corresponding entry in the `user_settings` table whenever a new user is added to the `users` table, provided the user is active.
- Ensured idempotency by dropping the trigger if it already exists before creating it.
- The trigger populates various default settings for the user, including notifications and accessibility options.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,6 +118,10 @@ jobs:
         working-directory: src-tauri
         run: cargo test --all --verbose
 
+      - name: Rust – migrations fresh DB guard
+        working-directory: src-tauri
+        run: cargo test migrations_fresh_db --verbose
+
       # ── Coverage (stable only) ────────────────────────────
       - name: Coverage – install tarpaulin
         if: matrix.rust == 'stable'
